# gds-cpp-messages

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
console_client/: Makefile  arg_parse.hpp  cert.p12  console_client.cpp  console_client.hpp  gds_uuid.hpp  main  main.cpp
console_client/exports/: 1265a3f8-0fc7-4852-9a2f-dddbf14edf9c.txt  19c34c40-1b01-47de-a8c1-06f601fb7fa5.txt  1df32e35-45a5-4955-aa75-4a254a6a1e24.txt  28846bc3-3b63-4fd1-b2e3-9f44575b7fed.txt  33edfc0e-7a56-438f-bc49-528151aa7e3c.txt  49cd0371-6702-4ce2-bdd1-de092d0e4602.txt  49f26b48-b965-4a9e-ac2d-4d242c6f1f1a.txt  4a1e0a17-8368-4c62-b730-1acdb6bd1f9a.txt  4e74d88e-2762-4eb2-a5da-df3470a9eb8c.txt  7f9c2ccc-7603-49a1-a24f-35fb111c94d7.txt  dbf99992-a9db-4e0a-bb99-9208f6e489ff.txt  e18b1f91-d9b7-42a2-b29a-7639042a90de.txt  e98e02d7-0245-498a-87a3-b58804b1038c.txt
example/: Makefile  gds_messages_example.cpp  gds_messages_example.hpp  io_service.cpp  io_service.hpp  main.cpp
simple_client/: Makefile  arg_parse.hpp  gds_uuid.hpp  main.cpp  semaphore.hpp  simple_gds_client.cpp  simple_gds_client.hpp
src/: countdownlatch.hpp  gds_certs.hpp  gds_clients.hpp  gds_connection.cpp  gds_connection.hpp  gds_connection_impl.cpp  gds_connection_impl.gpp  gds_connection_impl.hpp  gds_safe_queue.hpp  gds_types.cpp  gds_types.hpp  gds_uuid.hpp  semaphore.hpp
submodules/: README.md
submodules/simple-websocket/: asio_compatibility.hpp  client_ws.hpp
